--- a/_posts/2019-11-16-첫번째-포스트.md
+++ b/_posts/2019-11-16-첫번째-포스트.md
@@ -6,6 +6,6 @@ categories: memo
 ---
 # Jekyll 블로그 만들고 첫번째 포스트
 
-![my-image](../_site/assets/img/img1/handol.jpg)
+![my-image](/assets/img/img1/handol.jpg)
 
 테스트로 작성하는 첫번째 포스트입니다. 안녕하세요. 인하대학교 컴퓨터공학과에 재학 중인 박찬준입니다. 제가 배운것들을 기록하고 공부하기 위해서 만든 사이트입니다. 같이 공부해요!
