--- a/_posts/2020-07-10-[청년취업아카데미]DB 1일차.markdown
+++ b/_posts/2020-07-10-[청년취업아카데미]DB 1일차.markdown
@@ -151,6 +151,15 @@ SELECT EMPNAME || '의 월급은 ' || EMPSAL || '입니다' as "Employees"
 FROM EMP;
 ```
 
+#### DUAL 테이블
+
+오라클 자체에서 제공하는 테이블이다. 하나의 행과 하나의 열로 구성되며, Dummy 값이 들어있다. 간단하게 함수의 값을 테스트하거나 계산 결과값을 확인할 때 사용한다.
+
+```sql
+SELECT 'TIGER'
+FROM DUAL;
+```
+
 #### 대체 인용(q) 연산자
 
 만약 사용하고자 하는 리터럴 문자열 안에 인용 기호(') 가 들어 있고, 이 기호를 단순 문자열 데이터로 취급하고자 하는 경우 q 키워드를 이용하여 리터럴을 표시하는 기호를 변경해서 사용할 수 있다.
@@ -218,7 +227,7 @@ FROM employees
 WHERE hire_date = '17-OCT-03';
 ```
 
-위 쿼리에서 '17-OCT-03' 와 같이 날짜를 표시하는 형식는 NLS(Nationial Language Support) 라는 규칙에 의해서 정해진다.
+위 쿼리에서 '17-OCT-03' 와 같이 날짜를 표시하는 형식는 NLS(Nationial Language Support)_DATE_FORMAT 이라는 규칙에 의해서 정해진다.
 
 ### 비교 연산자
 
